# essay-writer

./: .gitignore  README  docker-compose.yml
backend/: Dockerfile  _init_.py  agent_handler.py  app.py  chatbot.py  main.py  pyproject.toml  requirements.txt
backend/agents/: __init__.py  critique_agent.py  generation_agent.py  main_agent.py  main_agent1.py  plan_agent.py  reflection_agent.py  research_agent.py  state_graph.py  test_critique_agent.py  test_main_agent.py  test_plan_agent.py  writer_agent.py
backend/agents/tests/: _init_.py  test_critique_agent.py  test_plan_agent.py  test_reflection_agent.py  test_research_agent.py  test_writer_agent.py
essay-researcher/: package-lock.json  package.json
frontend/: next.config.mjs  package-lock.json
frontend/app/: page.tsx
